# zyl

./: .gitignore  AGENTS.md  Cargo.toml  PROGRESS.md  README.md  a.out  a.out.s  gdb.txt  orks"))p  out  stdlib_test  stdlib_test.zyl  t.zyl  t_2arg_let.zyl  zyl_refactor_instructions.md  zyl_specification.txt
assets/: BRANDING.md
docs/: architecture-decisions.md  codebase-map.md  compiler-pipeline.md  design-rationale.md  implementation-status.md  regression-tests.md
spec/: 00-language-overview.md  01-lexing-and-tokens.md  02-syntax-and-forms.md  03-macros-and-hygiene.md  04-evaluation-semantics.md  05-types-and-inference.md  06-capability-types.md  07-region-memory-model.md  08-actors-and-concurrency.md  09-ffi-contracts.md  10-structs-and-data-types.md  11-icnf-ir.md  12-optimization-rules.md  13-code-generation.md  14-determinism-and-hashing.md  15-error-model.md
specifications/: ZylFormalSpecificationv1.0.txt  ZylFormalSpecificationv1.5.txt  ZylFormalSpecificationv2.1.0.txt  ZylFormalSpecificationv2.1.1.txt  ZylFormalSpecificationv2.2.txt  ZylFormalSpecificationv2.3.txt  ZylFormalSpecificationv2.4.txt  ZylFormalSpecificationv2.5.txt  ZylFormalSpecificationv2.6.txt  ZylFormalSpecificationv2.7.txt  ZylFormalSpecificationv2.8.txt  ZylFormalSpecificationv2.9.txt  ZylFormalSpecificationv3.0.txt  ZylFormalSpecificationv3.1.0.txt  ZylFormalSpecificationv3.1.1.txt  ZylFormalSpecificationv3.1.2.txt  ZylFormalSpecificationv3.1.3.txt  ZylFormalSpecificationv3.1_FINAL.txt  ZylFormalSpecificationv3.2.txt  ZylFormalSpecificationv3.3.txt  ZylFormalSpecificationv3.4.txt  (+3 more)
(+38 files in other folders)
