[package]
name = "zyl"
version = "0.1.0"
edition = "2021"
description = "A deterministic Lisp systems language with region inference, SSA IR, actor concurrency, and capability-based safety"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
indexmap = { version = "2", features = ["serde"] }
smallvec = "1"
hashbrown = "0.17"
crossbeam-channel = "0.5"

[dev-dependencies]
criterion = "0.8"

[[bin]]
name = "zyl"
path = "src/main.rs"

[[bin]]
name = "zyl-repl"
path = "src/repl.rs"
